--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     </nav>
     <main>
         <p>Информация об авторе</p>
-        <img src="mongolz.png" alt="Фото автора" width="200"
+        <img src="imeges/mongolz.png" alt="Фото автора" width="200"
         height="250">
         <p>Иванов Иван Иванович</p>
         <p>ЭФБО-00-00</p>
