--- a/pages/news.html
+++ b/pages/news.html
@@ -6,12 +6,12 @@
 </head>
 <body>
     <div>Хэдер</div>
-    <ul>
-        <li><a href="#">Главная</a></li>
-        <li><a href="#">Новости</a></li>
-        <li><a href="#">Практики</a></li>
-        <li><a href="#">Товары</a></li>
-        <li><a href="#">Контакты</a></li>
+   <ul>
+        <li><a href="../index.html">Главная</a></li>
+        <li><a href="pages/news.html">Новости</a></li>
+        <li><a href="pages/practices.html">Практики</a></li>
+        <li><a href="pages/goods.html">Товары</a></li>
+        <li><a href="pages/contacts.html">Контакты</a></li>
     </ul>
     
     <h1>Новость 1</h1>
