--- a/pages/goods.html
+++ b/pages/goods.html
@@ -3,26 +3,27 @@
 <head>
     <meta charset="UTF-8">
     <title>Товары</title>
+    <link rel="stylesheet" href="style/style.css">
 </head>
 <body>
     Хэдер
     <ul>
-        <li><a href="#">Главная</a></li>
-        <li><a href="#">Новости</a></li>
-        <li><a href="#">Практики</a></li>
-        <li><a href="#">Товары</a></li>
-        <li><a href="#">Контакты</a></li>
+        <li><a href="index.html">Главная</a></li>
+        <li><a href="pages/news.html">Новости</a></li>
+        <li><a href="pages/practices.html">Практики</a></li>
+        <li><a href="pages/goods.html">Товары</a></li>
+        <li><a href="pages/contacts.html">Контакты</a></li>
     </ul>
 
-    <img src="product1.jpg" alt="Товар 1" width="200">
+    <img src="imeges/product1.png" alt="Товар 1" width="200">
     <div>Товар 1</div>
     <div>Цена товара 1</div>
 
-    <img src="product2.jpg" alt="Товар 2" width="200">
+    <img src="imeges/product2.png" alt="Товар 2" width="200">
     <div>Товар 2</div>
     <div>Цена товара 2</div>
 
-    <img src="product3.jpg" alt="Товар 3" width="200">
+    <img src="imeges/product3.png" alt="Товар 3" width="200">
     <div>Товар 3</div>
     <div>Цена товара 3</div>
 
