--- a/pages/goods.html
+++ b/pages/goods.html
@@ -8,7 +8,7 @@
 <body>
     Хэдер
     <ul>
-        <li><a href="index.html">Главная</a></li>
+        <li><a href="../index.html">Главная</a></li>
         <li><a href="pages/news.html">Новости</a></li>
         <li><a href="pages/practices.html">Практики</a></li>
         <li><a href="pages/goods.html">Товары</a></li>
