--- a/pages/goods.html
+++ b/pages/goods.html
@@ -15,15 +15,15 @@
         <li><a href="pages/contacts.html">Контакты</a></li>
     </ul>
 
-    <img src="imeges/product1.png" alt="Товар 1" width="200">
+    <img src="../imeges/product1.png" alt="Товар 1" width="200">
     <div>Товар 1</div>
     <div>Цена товара 1</div>
 
-    <img src="imeges/product2.png" alt="Товар 2" width="200">
+    <img src="../imeges/product2.png" alt="Товар 2" width="200">
     <div>Товар 2</div>
     <div>Цена товара 2</div>
 
-    <img src="imeges/product3.png" alt="Товар 3" width="200">
+    <img src="../imeges/product3.png" alt="Товар 3" width="200">
     <div>Товар 3</div>
     <div>Цена товара 3</div>
 
