--- a/index.html
+++ b/index.html
@@ -4,13 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Семестровая работа</title>
-    <link rel="stylesheet" href="../style/style.css">
+    <link rel="stylesheet" href="style/style.css">
  </head>
  <body>
     <header>Хеадер</header>
     <nav>
         <ul>
-            <li><a href="../index.html">Главная</a></li>
+            <li><a href="index.html">Главная</a></li>
             <li><a href="pages/news.html">Новости</a></li>
             <li><a href="pages/practices.html">Практики</a></li>
             <li><a href="pages/goods.html">Товары</a></li>
