--- a/pages/goods.html
+++ b/pages/goods.html
@@ -9,10 +9,10 @@
     Хэдер
     <ul>
         <li><a href="../index.html">Главная</a></li>
-        <li><a href="pages/news.html">Новости</a></li>
-        <li><a href="pages/practices.html">Практики</a></li>
-        <li><a href="pages/goods.html">Товары</a></li>
-        <li><a href="pages/contacts.html">Контакты</a></li>
+        <li><a href="news.html">Новости</a></li>
+        <li><a href="practices.html">Практики</a></li>
+        <li><a href="goods.html">Товары</a></li>
+        <li><a href="contacts.html">Контакты</a></li>
     </ul>
 
     <img src="../imeges/product1.png" alt="Товар 1" width="200">
