--- a/pages/news.html
+++ b/pages/news.html
@@ -9,10 +9,10 @@
     <div>Хэдер</div>
    <ul>
         <li><a href="../index.html">Главная</a></li>
-        <li><a href="pages/news.html">Новости</a></li>
-        <li><a href="pages/practices.html">Практики</a></li>
-        <li><a href="pages/goods.html">Товары</a></li>
-        <li><a href="pages/contacts.html">Контакты</a></li>
+        <li><a href="news.html">Новости</a></li>
+        <li><a href="practices.html">Практики</a></li>
+        <li><a href="goods.html">Товары</a></li>
+        <li><a href="contacts.html">Контакты</a></li>
     </ul>
     
     <h1>Новость 1</h1>
