--- a/index.html
+++ b/index.html
@@ -1,20 +1,20 @@
 <!DOCTYPE html>
 <html lamg = "ru">
  <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Семестровая работа</title>
-    <link rel="stylesheet" href="style/style.css">
+    <link rel="stylesheet" href="style/style.css" />
  </head>
  <body>
     <header>Хеадер</header>
     <nav>
         <ul>
-            <li><a href="index.html">Главная</a></li>
-            <li><a href="pages/news.html">Новости</a></li>
-            <li><a href="pages/practices.html">Практики</a></li>
-            <li><a href="pages/goods.html">Товары</a></li>
-            <li><a href="pages/contacts.html">Контакты</a></li>
+            <li class="nav-item"><a href="index.html" class="nav-link">Главная</a></li>
+            <li class="nav-item"><a href="pages/news.html" class="nav-link">Новости</a></li>
+            <li class="nav-item"><a href="pages/practices.html" class="nav-link">Практики</a></li>
+            <li class="nav-item"><a href="pages/goods.html" class="nav-link">Товары</a></li>
+            <li class="nav-item"><a href="pages/contacts.html" class="nav-link">Контакты</a></li>
         </ul>
     </nav>
     <main>
